@@ -3,6 +3,11 @@ Changelog
 
 5.0-dev - (unreleased)
 ----------------------
+* Change: Switched to curl in the jenkins build install script
+  [olimpiurob refs #22402]
+* Change: Changed fetch url for jenkins build install script to the install 
+  script from the main EEA CPB repository
+  [olimpiurob refs #22402]
 
 4.9 - (2013-11-20)
 ------------------
